<resources>
    <string name="app_name">Top10News</string>

    <string name="change_theme">Change Theme</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_email">Email</string>
    <string name="login">Login</string>
    <string name="user_register">New User? Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register_and_sign_in">Regisger &amp; Login</string>
    <string name="user_registration">User Registration</string>
    <string name="reset_password">Reset Password</string>

    <string name="title_headlines">Headlines</string>
    <string name="title_story_detail">Story Detail</string>
    <string name="text_by">By: </string>
    
    <!-- Content description -->
    <string name="content_description_logo">App logo</string>

    <!-- Messages -->
    <string name="invalid_email">Use valid email</string>
    <string name="message_confirm_password">Password and confirm password are not same</string>
    <string name="message_error_loading_top_stories">Facing issue while loading top stories</string>
    <string name="message_error_loading_stories_details">Facing issue while loading stories details</string>
    <string name="message_loading_more_stories">Loading more stories&#8230;</string>
    <string name="message_article_detail_unavailable">Article detail is not available</string>
    <string name="message_no_connectivity">Please check internet connectivity. Tap to retry.</string>
    <string name="message_issue_while_loading_data">Got an issue while loading data. Tap to retry.</string>

    <string name="default_web_client">41490408806-qgbt5h9trqebmi2f99mgcuf5hr4rim25.apps.googleusercontent.com</string>
</resources>
