<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorScreenBackground">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.97" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.03" />

        <TextView
            android:id="@+id/txtChangeTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_theme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintHorizontal_bias="0.500"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.98"
            android:textColor="@android:color/holo_red_light" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUserName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/tilPassword"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.92">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_username"
                android:lines="1"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.50"
            app:passwordToggleEnabled="true"
            app:counterEnabled="true"
            app:counterMaxLength="16"
            app:counterOverflowTextColor="@android:color/holo_red_dark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            app:layout_constraintBottom_toBottomOf="@+id/txtChangeTheme"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/tilPassword"
            app:layout_constraintVertical_bias="0.15" />

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:contentDescription="@string/content_description_logo"
            app:layout_constraintBottom_toTopOf="@+id/tilUserName"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.80"
            android:background="@mipmap/ic_launcher_round"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>