<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="userRegistrationViewModel"
            type="com.newsapp.userexperience.auth.register.UserRegistrationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.97" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.03" />

        <TextView
            android:id="@+id/tvUserRegistration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:textStyle="bold"
            android:text="@string/user_registration"
            app:layout_constraintBottom_toTopOf="@+id/tilEmail"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.88" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/tilPassword"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.92">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_username"
                style="@style/edtEmail"
                android:text="@={userRegistrationViewModel.username}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.50"
            app:passwordToggleEnabled="true"
            app:counterEnabled="true"
            app:counterMaxLength="16"
            app:counterOverflowTextColor="@android:color/holo_red_dark" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                style="@style/edtPassword"
                android:text="@={userRegistrationViewModel.password}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilConfirmPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="16"
            app:counterOverflowTextColor="@android:color/holo_red_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/tilPassword"
            app:passwordToggleEnabled="true"
            app:layout_constraintVertical_bias="0.08">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_confirm_password"
                style="@style/edtPassword"
                android:text="@={userRegistrationViewModel.confirmPassword}" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnRegisterAndSignIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/register_and_sign_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/tilConfirmPassword"
            app:layout_constraintVertical_bias="0.08"
            android:onClick="@{() -> userRegistrationViewModel.registerAndLogin()}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
